# RAG_krishNaik

./: .gitignore  README.md  desktop.ini  main.py  pyproject.toml
data/text_files/: python_intro.txt
notebook/: document.ipynb  pdf_loader.ipynb
